# POS

./: CMakeLists.txt  ipc_shm.c  klient.c  main.c  menu.c  server.c
headers/: client_logic.h  client_menu.h  client_render.h  common.h  ipc_shm.h  server_logic.h
